--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,6 @@
 .app {
-    background: gray;
+    font-family: Roboto, sans-serif;
+    font-size: 18px;
+    color: white;
+    background: #1F1F1F;
 }
