--- a/app/components/messages/messages.css
+++ b/app/components/messages/messages.css
@@ -1,5 +1,7 @@
 .messages {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    /* grid-template-rows: repeat(auto-fill, 80px); */
     height: 400px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -30,12 +32,12 @@
 }
 
 .start {
-    justify-self: start;
+    align-self: flex-start;
     animation: translateFromLeft .5s;
 }
 
 .end {
-    justify-self: end;
+    align-self: flex-end;
     animation: translateFromRight .5s;
 }
 
