--- a/app/components/messages/messages.css
+++ b/app/components/messages/messages.css
@@ -1,10 +1,11 @@
 .messages {
     display: flex;
     flex-direction: column;
-    /* grid-template-rows: repeat(auto-fill, 80px); */
     height: 400px;
+    width: 400px;
     overflow-y: auto;
     overflow-x: hidden;
+    padding: 10px;
 }
 
 .messagesNone {
@@ -43,4 +44,9 @@
 
 .avatar {
     width: 50px;
+    margin: 10px;
+}
+
+.messageText {
+    margin: 10px;
 }
