--- a/app/app.css
+++ b/app/app.css
@@ -8,6 +8,10 @@
 
 body {
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 html, body {
